--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "js-base64": "^3.7.4",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^4.13.0",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.0"
   }
 }
