--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sweetalert2": "^11.7.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
